welcome.lessons.welcome.array.island.Island.scala.error
island:9: error: type mismatch;
 found   : Boolean(true)
 required: Int
    	return true
               ^island:11: error: type mismatch;
 found   : Boolean(false)
 required: Int
  return false
         ^